fix collapse transition

--- a/React-prac/random-react/src/collapsible/collapsible.scss
+++ b/React-prac/random-react/src/collapsible/collapsible.scss
@@ -12,15 +12,33 @@
 // }
 
 // css transition of masx-height
+// .panel {
+//   .panel-collapse {
+//     max-height: 0;
+//     overflow: hidden;
+//     transition: max-height 0.5s cubic-bezier(0.5, 0.66, 0.49, 1.4);
+//   }
+//   &.is-expanded {
+//     .panel-collapse {
+//       max-height: 200px;
+//     }
+//   }
+// }
+
+// js calculated height for transition
+
 .panel {
-  .panel-collapse {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s cubic-bezier(0.5, 0.66, 0.49, 1.4);
+  .panel-heading {
+    cursor: pointer;
   }
-  &.is-expanded {
-    .panel-collapse {
-      max-height: 200px;
-    }
+  .panel-collapse {
+    overflow: hidden;
+    transition: height 0.4s ease-out;
+  }
+  .panel-body {
+    border: none !important;
+  }
+  h2 {
+    margin-top: 5px !important;
   }
 }
